# defused

./: .clang-format  .editorconfig  .gitignore  .treefmt.toml  README.md  REUSE.toml  flake.nix  meson.build
.github/: dependabot.yml
.github/workflows/: build-nix.yml  claude.yml
data/: website.soss.defused.policy
doc/: contributing.md  protocol.md
examples/: 50-defused-mount-policy.rules
nixos/: module.nix
nixos/tests/: common.nix  daemon.nix  default.nix  file-mountpoint.nix  mount-namespace.nix  mount-options.nix  mountpoint-ownership.nix  polkit.nix  simple.nix
src/: defused-sandbox.c  defused-sandbox.h  defused-varlink.c  defused.c  defused.h  defused_proto.h  fusermount3.c  util.c  util.h
tests/: test_client.c  test_mountns.c  test_protocol.c  varlink-smoke-test.sh
units/: defused.service  defused.socket
